Bugfix
Fixed stretched image on the Exvo page on Firefox

--- a/_sass/portfolio/_exvo.scss
+++ b/_sass/portfolio/_exvo.scss
@@ -110,7 +110,7 @@ $highlight: #00A5F0;
 			}
 			
 			img {
-				max-width: 50%;
+				width: 50%;
 				margin-top: 0px;
 			}
 		}
